# haskcalc

./: .gitignore  README.md
haskcalc/: Arithmetic.hs  BinUtils.hs  BitwiseUtils.hs  Trigonometric.hs  calculator.hs  haskcalc  haskcalc.cabal
haskcalc/Utils/: Conversion.hs  Strings.hs
haskcalc/app/: Main.hs
haskcalc/src/: Arithmetic.hs  Trigonometric.hs
haskcalc/src/Utils/: Bitwise.hs  Conversion.hs  Strings.hs
web/: autoloader.php  composer.json  constants.php  index.php
web/css/: main.css
web/haskcalc/: App.php
web/haskcalc/controllers/: EvaluationController.php  SiteController.php  TestController.php
web/haskcalc/core/: BaseController.php
web/haskcalc/utils/: HaskellCalc.php  Parser.php
web/js/: main.js  main_jq.js
web/templates/: base.twig  index.twig
