name:                haskcalc
version:             0.1.0.0
synopsis:            Una calculadora bien shidori
description:         Please see README.md
homepage:            https://github.com/AndresISC/haskcalc#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Arithmetic, Trigonometric
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
  other-modules:       Utils.Bitwise, Utils.Conversion, Utils.Strings

executable haskcalc-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskcalc
  default-language:    Haskell2010

test-suite haskcalc-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskcalc
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/haskcalc
